--- a/Historico.html
+++ b/Historico.html
@@ -32,6 +32,11 @@
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
 
+    <strong>04/03 Sábado</strong> 2.1<br>
+    Eu removi todos comentários de várias páginas hmtl que eu tive e<br> coloquei tudo em TagsHTML<br>
+    Criado a página TagsJavaScript
+    <br><br>
+    
     <strong>03/03 Sexta-Feira</strong> 2.0<br>
     Criado o menu Livros e Passos<br>
     Livros são indicações<br>
