--- a/Algoritmo.html
+++ b/Algoritmo.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=0.5">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Algoritmo</title>
 	<link rel="stylesheet" href="estilo01.css">
 	<link rel="shortcut icon" href="favicon.ico">
@@ -14,21 +14,25 @@
 	<ul>
 		<li><a href="index.html" rel="prev">Voltar</a></li>
 	</ul>
-	<ul>
-		<li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
+	<ol>
+        <li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
         <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
         <li><a href="Dicas.html">Dicas</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="Livros.html">Livros</a></li>
+        <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
         <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
+        <li><a href="Passos.html">Passos</a></li>
         <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
         <li><a href="ProjetoGoogleGlass.html">ProjetoGoogleGlass</a></li>
         <li><a href="Python.html" rel="next">Python</a></li>
         <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
+        <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
-	</ul>
+    </ol>
 
 	<div id="interface">
 	<h1>Algoritmo</h1>
@@ -257,7 +261,7 @@
 	senao
 		Se (situação 2) entao</p>
 	--------Bloco B</p>
-	senao</p>
+		senao</p>
 	--------Bloco C</p>
 		FimSe</p>
 	FimSe</p>
@@ -296,32 +300,32 @@
 
 	<strong>15-Estruturas de Repetição 1</strong></p>
 
-						Exemplo 01 :</p>
-						Enquanto expressão faça</p>
-						bloco</p>
-						FimEnquanto</p>
+	Exemplo 01 :</p>
+	Enquanto expressão faça</p>
+		bloco</p>
+	FimEnquanto</p>
 
-						Exemplo 02 :</p>
+	Exemplo 02 :</p>
 
-						variável <- 0</p>
-							Enquanto (variável <= número) faça</p>
-								Mensagem(variável)</p>
-								variável <- variável + 1</p>
-									FimEnquanto</p>
+	variável <- 0</p>
+	Enquanto (variável <= número) faça</p>
+		Mensagem(variável)</p>
+		variável <- variável + 1</p>
+	FimEnquanto</p>
+	
+	Exemplo 03 :</p>
 
-									Exemplo 03 :</p>
-
-									cont <- 1</p>
-										s <- 0</p>
-											Enquanto (cont <= 10 ) faça</p>
-												Escreval("Digite ", cont)</p>
-												Leia(N)</p>
-												Se ( N > maior ) então</p>
-												maior <- N</p>
-													FimSe</p>
-													S <- S + N</p>
-														cont <- cont + 1</p>
-															FimEnquanto</p>
+	cont <- 1</p>
+	s <- 0</p>
+	Enquanto (cont <= 10 ) faça</p>
+		Escreval("Digite ", cont)</p>
+		Leia(N)</p>
+		Se ( N > maior ) então</p>
+			maior <- N</p>
+		FimSe</p>
+		S <- S + N</p>
+		cont <- cont + 1</p>
+	FimEnquanto</p>
 </div>
 </body>
 </html>
