--- a/MySQL.html
+++ b/MySQL.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MySQL</title>
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="estilo55.css">
+    <link rel="stylesheet" href="estilo07.css">
 </head>
 <body>
     <ol>
@@ -15,14 +15,17 @@
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
         <li><a href="Dicas.html">Dicas</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="Livros.html">Livros</a></li>
         <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
         <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
+        <li><a href="Passos.html">Passos</a></li>
         <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
         <li><a href="ProjetoGoogleGlass.html">ProjetoGoogleGlass</a></li>
         <li><a href="Python.html" rel="next">Python</a></li>
         <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
+        <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
     </ol>
     <div id="interface">
