--- a/NomeIdiomas.html
+++ b/NomeIdiomas.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NomeIdiomas</title>
-    <link rel="stylesheet" href="estilo06.css">
+    <link rel="stylesheet" href="estilo08.css">
     <link rel="shortcut icon" href="favicon.ico">
 </head>
 
@@ -13,21 +13,25 @@
     <ul>
 		<li><a href="index.html" rel="prev">Voltar</a></li>
 	</ul>
-	<ul>
-		<li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
+	<ol>
+        <li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
         <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
         <li><a href="Dicas.html">Dicas</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="Livros.html">Livros</a></li>
+        <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
         <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
+        <li><a href="Passos.html">Passos</a></li>
         <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
         <li><a href="ProjetoGoogleGlass.html">ProjetoGoogleGlass</a></li>
         <li><a href="Python.html" rel="next">Python</a></li>
         <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
+        <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
-	</ul>
+    </ol>
     <div id="interface">
     <h1 align="center"><strong>Meu nome em vários idiomas</strong></h1>
 
