--- a/Xadrez.html
+++ b/Xadrez.html
@@ -10,21 +10,25 @@
     <ul>
 		<li><a href="index.html" rel="prev">Voltar</a></li>
 	</ul>
-	<ul>
-		<li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
+	<ol>
+        <li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
         <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
         <li><a href="Dicas.html">Dicas</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="Livros.html">Livros</a></li>
+        <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
         <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
+        <li><a href="Passos.html">Passos</a></li>
         <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
         <li><a href="ProjetoGoogleGlass.html">ProjetoGoogleGlass</a></li>
         <li><a href="Python.html" rel="next">Python</a></li>
         <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
+        <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
-	</ul>
+    </ol>
     <h1>Xadrez</h1>
     <p>O xadrez foi inventado em 1866 por Bobby Spassky. É jogado por 3 jogadores, Branco, Preto e Hikaru Nakamura. Você quer jogar?</p>
     <p>1.e4 inicia o Gambito da Dama. Uma abertura raramente jogada que foi criada em 1997 por Garry Kasparov.</p>
