--- a/Historico.html
+++ b/Historico.html
@@ -13,24 +13,35 @@
     <ul>
 		<li><a href="index.html" rel="prev">Voltar</a></li>
 	</ul>
-	<ul>
-		<li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
+	<ol>
+        <li><a href="Algoritmo.html" rel="next">Algoritmo</a></li>
         <li><a href="Atalhos.html" rel="next">Atalhos</a></li>
         <li><a href="Curiosidades.html" rel="next">Curiosidades</a></li>
         <li><a href="Dicas.html">Dicas</a></li>
         <li><a href="Historico.html" rel="next">Histórico</a></li>
+        <li><a href="Livros.html">Livros</a></li>
+        <li><a href="MySQL.html">MySQL</a></li>
         <li><a href="NomeIdiomas.html" rel="next">NomeIdiomas</a></li>
         <li><a href="PaginaHTML.html" rel="next">PáginaHTML</a></li>
+        <li><a href="Passos.html">Passos</a></li>
         <li><a href="ProjetoAlfa.html" rel="next">ProjetoAlfa</a></li>
         <li><a href="ProjetoGoogleGlass.html">ProjetoGoogleGlass</a></li>
         <li><a href="Python.html" rel="next">Python</a></li>
         <li><a href="TagsCSS.html"rel="next">TagsCSS</a></li>
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
+        <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
-	</ul>
+    </ol>
     <div id="interface">
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
+
+    <strong>07/02 Terça-Feira</strong> 2.2<br>
+    Bom galera, me desculpem, mas sábado fui pra um aniversário, dai domingo estava morto de cansaço, pois eu corri nesse dia e fiquei muito em pé na festa<br>
+    Mas vamos ao que interessa : Eu coloquei os menus em todas as páginas, menos no ProjetoGoogleGlass, pois ela é algo separado site que eu fiz<br>
+    Eu percebi que no meu celular a página principal estaba bugando ( as palavras do menus estavam no fundo das outras) e as outras não, então eu atualizei os comandos de acordo com a que ta funcionando, por causa disso não irei mexer no CSS dela<br>
+    Alterei o fundo de várias páginas, então é isso, estou de volta, firme e forte.
+    <br><br>
 
     <strong>04/03 Sábado</strong> 2.1<br>
     Eu removi todos comentários de várias páginas hmtl que eu tive e<br> coloquei tudo em TagsHTML<br>
