--- a/Historico.html
+++ b/Historico.html
@@ -35,6 +35,12 @@
     <div id="interface">
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong><br>
+    
+    <strong>08/02 Quarta-Feira</strong> 2.3 <br>
+    Adicionei o menu ZZZ01 é o 2° projeto que estou pensando em focar, futuramente irei explicar o que é<br>
+    Adicionei muitas coisas no menu Python<br>
+    Versão saindo tarde, pois ainda estou corrigindo meu horário de sono
+    <br><br>
 
     <strong>07/02 Terça-Feira</strong> 2.2<br>
     Bom galera, me desculpem, mas sábado fui pra um aniversário, dai domingo estava morto de cansaço, pois eu corri nesse dia e fiquei muito em pé na festa<br>
