--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li><a href="TagsHTML.html" rel="next">TagsHTML</a></li>
         <li><a href="TagsJavaScript.html">TagsJavaScript</a></li>
         <li><a href="Xadrez.html" rel="next">Xadrez</a></li>
+        <li><a href="ZZZ01.html" rel="next">ZZZ01</a></li>
     </ol>
 
     <div id="interface">
